--- a/produktif1.html
+++ b/produktif1.html
@@ -107,7 +107,17 @@
         <!-- end jumbotron -->
 
         <!-- image -->
-        <h1 class="text-center josefin" style="margin-bottom: 3em;" data-aos="fade-pop">Segera di tambahkan ...</h1>
+        <div class="comment-box">
+            <div class="comment-header">
+            </div>
+            <div class="comment-content">
+                <h1>Segera ditambahkan.</h1>
+                <p style="color: grey; opacity: 40%;">This is My Journey! ~</p>
+            </div>
+            <div class="comment-info">
+                <span class="comment-time">21:06 | Ahad, 21 Juli 2024</span>
+            </div>
+        </div>
         <!-- end image -->
 
 
