--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./foto/albumbg.jpg" alt="">
+    <img style="size: 70px;" src="./foto/albumbg.jpg" alt="">
 </body>
 </html>
