--- a/album.html
+++ b/album.html
@@ -119,25 +119,13 @@
         </section>
         <!-- end jumbotron -->
 
-        <div class="comment-box">
-            <div class="comment-header">
-            </div>
-            <div class="comment-content">
-                <h1>Segera ditambahkan.</h1>
-                <p style="color: grey; opacity: 40%;">This is My Journey! ~</p>
-            </div>
-            <div class="comment-info">
-                <span class="comment-time">21:06 | Ahad, 21 Juli 2024</span>
-            </div>
-        </div>
-
         <!-- image -->
-        <!-- <div class="galeri" id="galeriCuy">
-            <img src="./album/photo1.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo2.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo3.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo4.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo5.jpg" onclick="showPreview(this.src)">
+         <div class="galeri" id="galeriCuy">
+            <img src="./album/photo1.jpeg" onclick="showPreview(this.src)">
+            <img src="./album/photo2.jpeg" onclick="showPreview(this.src)">
+            <img src="./album/photo3.jpeg" onclick="showPreview(this.src)">
+            <img src="./album/photo4.jpeg" onclick="showPreview(this.src)">
+            <img src="./album/photo5.jpeg" onclick="showPreview(this.src)">
             <img src="./album/photo6.jpg" onclick="showPreview(this.src)">
             <img src="./album/photo7.jpg" onclick="showPreview(this.src)">
             <img src="./album/photo8.jpg" onclick="showPreview(this.src)">
@@ -146,10 +134,10 @@
         <!-- end image -->
 
         <!-- preview image -->
-        <!-- <div class="previewImage" id="previewImage" style="display: none;">
+         <div class="previewImage" id="previewImage" style="display: none;">
             <img id="previewImg">
             <span onclick="closePreviewImg()"><i class="fa fa-times-circle"></i></span>
-        </div> -->
+        </div>
         <!-- end preview image -->
 
         <!-- javascript -->
