change the code

--- a/album.html
+++ b/album.html
@@ -119,6 +119,8 @@
         </section>
         <!-- end jumbotron -->
 
+<h1 class="Josefin text-center">Miss this moment...</h1>
+
         <!-- image -->
          <div class="galeri" id="galeriCuy">
             <img src="./album/photo1.jpeg" onclick="showPreview(this.src)">
