--- a/album.html
+++ b/album.html
@@ -128,10 +128,7 @@
             <img src="./album/photo3.jpeg" onclick="showPreview(this.src)">
             <img src="./album/photo4.jpeg" onclick="showPreview(this.src)">
             <img src="./album/photo5.jpeg" onclick="showPreview(this.src)">
-            <img src="./album/photo6.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo7.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo8.jpg" onclick="showPreview(this.src)">
-            <img src="./album/photo9.jpg" onclick="showPreview(this.src)">
+            <img src="./album/photo6.jpeg" onclick="showPreview(this.src)">
         </div>
         <!-- end image -->
 
@@ -187,7 +184,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://twitter.com/chyaa30">
+                                <a href="https://x.com/chyaa30">
                                     <span class="fa-stack fa-lg icon-color">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-brands fa-twitter fa-stack-1x fa-inverse"></i>
