--- a/video.html
+++ b/video.html
@@ -148,7 +148,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://twitter.com/chyaa30">
+                                <a href="https://x.com/chyaa30">
                                     <span class="fa-stack fa-lg icon-color">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-brands fa-twitter fa-stack-1x fa-inverse"></i>
