create video feature

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <h1 class="bgHitam text-white text-center"
                         style="font-weight: 755; font-style: italic; margin-top: 3em; margin-bottom: 1.5em;"
                         data-aos="fade-right" id="textS" data-aos-duration="1000">
-                        Selamat Datang!<br><a style="font-size: medium;">Inilah dunia kreativitas milik saya!</a>
+                        Selamat Datang!<br><p style="font-size: medium;" data-aos="fade-left" data-aos-duration="1000">Inilah dunia kreativitas milik saya!</p>
                     </h1>
                 </div>
             </div>
