add some many changes

--- a/album.html
+++ b/album.html
@@ -122,7 +122,7 @@
 <h1 class="Josefin text-center">Miss this moment...</h1>
 
         <!-- image -->
-         <div class="galeri" id="galeriCuy">
+         <div class="galeri" id="galeriCuy" data-aos="fade-pop" data-aos-duration="1000">
             <img src="./album/photo1.jpeg" onclick="showPreview(this.src)">
             <img src="./album/photo2.jpeg" onclick="showPreview(this.src)">
             <img src="./album/photo3.jpeg" onclick="showPreview(this.src)">
