--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
             <div class="container">
                 <div class="row">
                     <h1 class="bgHitam text-white text-center"
-                        style="font-weight: 755; font-style: italic; margin-top: 3em; margin-bottom: 1.5em;"
+                        style="font-weight: 755; font-style: italic; margin-top: 3em;"
                         data-aos="fade-right" id="textS" data-aos-duration="1000">
-                        Selamat Datang!<br><p style="font-size: medium;" data-aos="fade-left" data-aos-duration="1000">Inilah dunia kreativitas milik saya!</p>
+                        Selamat Datang!
+                    </h1>
+                    <h1 class="text-white text-center"
+                        style="font-size: 20px; font-weight: 755; font-style: italic;margin-bottom: 1.5em;"
+                        data-aos="fade-left" id="textS" data-aos-duration="1000">
+                        Inilah dunia kreatifitas milik saya!
                     </h1>
                 </div>
             </div>
@@ -144,11 +149,11 @@
                                         style="text-align: right; color: white; margin-top: 1em;" class="josefin">
                                         Rivaldo Cahya Saputra
                                     </h2>
-                                    <p id="textS" class="josefin" style="font-weight: 600;" data-aos="fade-left"
+                                    <p id="textS" class="text-white josefin" style="text-align: right; font-weight: 600;" data-aos="fade-left"
                                         data-aos-duration="1000">
                                         XI TJKT 1
                                     </p>
-                                    <hr style="margin-bottom: 2em;" data-aos="fade-left" data-aos-duration="1000">
+                                    <hr style="margin-bottom: 2em;" class="text-white" data-aos="fade-left" data-aos-duration="1000">
                                 </div>
                             </div>
                             <div class="geserwoy"></div>
