--- a/video.html
+++ b/video.html
@@ -66,7 +66,7 @@
                         <a class="nav-link nunito" aria-current="page" href="./album.html">Albumku</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nunito" aria-current="page" href="./tutorVideo.html">Videoku</a>
+                            <a class="nav-link nunito" aria-current="page" href="#">Videoku</a>
                         </li>
                         <li class="nav-item dropdown nunito">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -108,19 +108,57 @@
         </section>
         <!-- end jumbotron -->
 
-        <!-- image -->
-        <div class="comment-box">
+        <!-- content -->
+        <h1 class="josefin text-center" style="margin-bottom: 70px;">My Videos</h1>
+
+<!-- this first content -->
+        <div class="comment-box" style="margin-bottom: 3em;">
             <div class="comment-header">
+                <div class="comment-info">
+                </div>
             </div>
             <div class="comment-content">
-                <h1>Segera ditambahkan.</h1>
-                <p style="color: grey; opacity: 40%;">This is My Journey! ~</p>
-            </div>
-            <div class="comment-info">
-                <span class="comment-time">21:06 | Ahad, 21 Juli 2024</span>
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Apa itu Bekerja Di Ketinggian? Dan apa itu K3LH?</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/dzfXEhiLLx0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>
+                            Didalam video ini, Saya, Dafa, Sheren, Alfira, Syabrina, M.Apri akan menjelaskan tentang "Bekerja Di Ketinggian". Kita cari tahu bareng bareng apa saja yang dimaksud Bekerja Di Ketinggian itu.
+                            <br>dan kami juga membahas, alat-alat safety yang harus dipakai para pekerja, faktor penyebab terjadinya kecelakaan dalam bekerja di ketinggian.
+                        </p>
+                        <span class="comment-time josefin">10:31 - Senin, 22 Juli 2024</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- end image -->
+        <!-- fisrt content -->
+         <!-- this second content -->
+        <div class="comment-box" style="margin-bottom: 3em;">
+            <div class="comment-header">
+                <div class="comment-info">
+                </div>
+            </div>
+            <div class="comment-content">
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Cara membuat website yang mudah tanpa coding sedikitpun!</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/7_8F4KA6dF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>
+                            Sesuai judul atau titlenya, saya memberikan tutorial cara membuat website tanpa coding sedikitpun dan dapat dilakukan oleh semua orang!
+                            <br>cuma pake fitur buatan google, langsung bisa bikin tanpa harus bayar sepeserpun!
+                            <br>kapan lagi bisa buat website tanpa harus beli website? bisa di pake buat usaha lagi!
+                        </p>
+                        <span class="comment-time josefin">11:04 - Senin, 22 Juli 2024</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- second content -->
+        <!-- end content -->
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
