--- a/produktif1.html
+++ b/produktif1.html
@@ -85,7 +85,7 @@
         <!-- End Navbar -->
 
         <!-- jumbotron -->
-        <section id="albumBG" style="overflow-y: hidden !important; overflow-x: hidden !important;">
+        <section id="produktifBG" style="overflow-y: hidden !important; overflow-x: hidden !important;">
             <div class="container">
                 <div class="row">
                     <h1 class="nunito text-white text-center"
@@ -107,19 +107,18 @@
         </section>
         <!-- end jumbotron -->
 
-        <!-- image -->
+        <!-- content -->
         <div class="comment-box">
             <div class="comment-header">
+                <div class="comment-info">
+                </div>
             </div>
             <div class="comment-content">
-                <h1>Segera ditambahkan.</h1>
-                <p style="color: grey; opacity: 40%;">This is My Journey! ~</p>
-            </div>
-            <div class="comment-info">
-                <span class="comment-time">21:06 | Ahad, 21 Juli 2024</span>
+                <h1 class="text-center">Segera ditambahkan ...</h1>
+                <p class="comment-time text-center">21:06 | Ahad, 21 Juli 2024</p>
             </div>
         </div>
-        <!-- end image -->
+        <!-- end content -->
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
