--- a/album.html
+++ b/album.html
@@ -119,7 +119,7 @@
         </section>
         <!-- end jumbotron -->
 
-<h1 class="Josefin text-center">Miss this moment...</h1>
+<h1 class="josefin text-center">Miss this moment...</h1>
 
         <!-- image -->
          <div class="galeri" id="galeriCuy" data-aos="fade-pop" data-aos-duration="1000">
