--- a/album.html
+++ b/album.html
@@ -78,15 +78,8 @@
                         <li class="nav-item">
                             <a class="nav-link nunito" aria-current="page" href="./video.html">Videoku</a>
                         </li>
-                        <li class="nav-item dropdown nunito">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Produktif
-                            </a>
-                            <ul class="dropdown-menu animated-dropdown-menu">
-                                <li><a class="dropdown-item nunito" href="./produktif1.html">Produktif #1</a></li>
-                                <li><a class="dropdown-item nunito" href="./produktif2.html">Produktif #2</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link nunito" aria-current="page" href="./materi.html">Materi</a>
                         </li>
                     </ul>
                 </div>
