--- a/materi.html
+++ b/materi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>My Journey! | Produktif #1</title>
+    <title>My Journey! | Materi</title>
     <link rel="icon" type="image/png" href="./foto/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -68,15 +68,8 @@
                         <li class="nav-item">
                             <a class="nav-link nunito" aria-current="page" href="./video.html">Videoku</a>
                         </li>
-                        <li class="nav-item dropdown nunito">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Produktif
-                            </a>
-                            <ul class="dropdown-menu animated-dropdown-menu">
-                                <li><a class="dropdown-item nunito" href="#">Produktif #1</a></li>
-                                <li><a class="dropdown-item nunito" href="./produktif2.html">Produktif #2</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link nunito" aria-current="page" href="./materi.html">Materi</a>
                         </li>
                     </ul>
                 </div>
@@ -114,8 +107,7 @@
                 </div>
             </div>
             <div class="comment-content">
-                <h1 class="text-center">Segera ditambahkan ...</h1>
-                <p class="comment-time text-center">21:06 | Ahad, 21 Juli 2024</p>
+                <h1 class="text-center">Pilih Materi Yang Ingin Kamu Cari!</h1>
             </div>
         </div>
         <!-- end content -->
