--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./anotherImprove.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&display=swap"
@@ -61,6 +62,9 @@
                         <li class="nav-item">
                             <a class="nav-link nunito" aria-current="page" href="#">Beranda</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link nunito" aria-current="page" onclick="scrollToAbout()">Tentangku</a>
+                        </li>
                         <a class="nav-link nunito" aria-current="page" href="./album.html">Albumku</a>
                         </li>
                         <li class="nav-item">
@@ -79,13 +83,13 @@
             <div class="container">
                 <div class="row">
                     <h1 class="bgHitam text-white text-center"
-                        style="font-weight: 755; font-style: italic; margin-top: 3em;"
-                        data-aos="fade-right" id="textS" data-aos-duration="1000">
+                        style="font-weight: 755; font-style: italic; margin-top: 3em; text-shadow: 2px 2px 4px #44423d6c;"
+                        data-aos="fade-right" id="welcome" data-aos-duration="1000">
                         Selamat Datang!
                     </h1>
                     <h1 class="text-white text-center"
-                        style="font-size: 20px; font-weight: 755; font-style: italic;margin-bottom: 1.5em;"
-                        data-aos="fade-left" id="textS" data-aos-duration="1000">
+                        style="font-size: 20px; font-weight: 755; font-style: italic;margin-bottom: 1.5em; text-shadow: 2px 2px 4px #44423d6c;"
+                        data-aos="fade-left" data-aos-duration="1000">
                         Inilah dunia kreatifitas milik saya!
                     </h1>
                 </div>
@@ -101,10 +105,8 @@
                 <div class="row justify-content-center">
                     <div class="col-12">
                         <div class="white-box">
-                            <h1 style="font-size: 40px; margin-top: 2em; font-weight: 800;" data-aos="fade-pop"
-                                data-aos-duration="1000" class="josefin">Halo!✌</h1>
-                            <h3 class="text-center nunito" style="font-size: 16px; margin-bottom: 7em;" data-aos="fade"
-                                data-aos-duration="1000">
+                            <h1 data-aos="fade-pop" id="HaloText" data-aos-duration="1000" class="josefin">Halo!✌</h1>
+                            <h3 class="text-center nunito" id="deskripsi" data-aos="fade" data-aos-duration="1000">
                                 Disini adalah tempat dimana saya
                                 menceritakan<br>tentang kehidupan saya, Materi pembelajaran<br>saya, Album Kehidupan
                                 saya,
@@ -123,7 +125,7 @@
             <div class="container position-relative" id="tentangku">
                 <div class="row">
                     <h1 id="textS" class="text-white text-center"
-                        style="font-weight: 755; font-style: italic; margin-bottom: 1em; margin-top: 1.5em;"
+                        style="font-weight: 755; font-style: italic; margin-bottom: 1em; margin-top: 1.5em; text-shadow: 2px 2px 4px #44423d6c;"
                         id="Welcome-text" data-aos="zoom-in" data-aos-duration="1000">
                         Perkenalkan, Saya ...
                     </h1>
@@ -136,14 +138,17 @@
                                     data-aos="fade-right" data-aos-duration="1000" draggable="false">
                                 <div class="text-content">
                                     <h2 id="textS" data-aos="fade-left" data-aos-duration="1000"
-                                        style="text-align: right; color: white; margin-top: 1em;" class="josefin">
+                                        style="text-align: right; color: white; margin-top: 1em; text-shadow: 2px 2px 4px #44423d6c;"
+                                        class="josefin">
                                         Rivaldo Cahya Saputra
                                     </h2>
-                                    <p id="textS" class="text-white josefin" style="text-align: right; font-weight: 600;" data-aos="fade-left"
-                                        data-aos-duration="1000">
+                                    <p id="textS" class="text-white josefin"
+                                        style="text-align: right; font-weight: 600; text-shadow: 2px 2px 4px #44423d6c; "
+                                        data-aos="fade-left" data-aos-duration="1000">
                                         XI TJKT 1
                                     </p>
-                                    <hr style="margin-bottom: 2em;" class="text-white" data-aos="fade-left" data-aos-duration="1000">
+                                    <hr style="margin-bottom: 2em;" class="text-white" data-aos="fade-left"
+                                        data-aos-duration="1000">
                                 </div>
                             </div>
                             <div class="geserwoy"></div>
@@ -191,12 +196,10 @@
         <div></div>
         <section id="Article">
             <div class="container">
-                <h1 class="tentang text-center josefin" data-aos="fade" data-aos-duration="1000"
-                    style="margin-bottom: 2em; font-size: 20px; font-weight: 800; margin-top: 1.25em;">Tentang Diriku
+                <h1 class="tentang text-center josefin" data-aos="fade" data-aos-duration="1000">Tentang Diriku
                 </h1>
                 <div class="row">
-                    <div style="font-size: 13px; margin-bottom: 5.4em; font-weight: 500;" data-aos="fade"
-                        data-aos-duration="1000" class="nunito">
+                    <div data-aos="fade" data-aos-duration="1000" class="nunito">
                         Saya Rivaldo Cahya Saputra. Umurku 17 Tahun, dan aku bersekolah di SMKN 15 Kota Bekasi. Dan saya
                         berada di jenjang kelas 11 SMK di Kelas XI TJKT 1! Dan, Hobi saya itu Membaca Buku &
                         Mendengarkan lagu. Motivasi saya membuat website ini adalah untuk berbagi ilmu tentang dunia IT
@@ -204,16 +207,14 @@
                         saya ketahui kepada teman-teman diluar
                         sana yang belum mengetahui.
                     </div>
-                    <hr style="margin-bottom: 3em;" data-aos="fade" data-aos-duration="1000">
+                    <hr id="garisBawah" data-aos="fade" data-aos-duration="1000">
                 </div>
-                <h1 class="josefin text-align-left" data-aos="fade-right" data-aos-duration="1000"
-                    style="font-size: 18px; font-weight: 800; margin-bottom: 1em;">
-                    <i style="font-size: 20px;" class="far fa-solid fa-user"></i>
+                <h1 class="josefin text-align-left" data-aos="fade-right" data-aos-duration="1000">
+                    <i id="DDindexJi" class="far fa-solid fa-user"></i>
                     | Cara Belajar Saya
                 </h1>
                 <div class="row text-align-right">
-                    <div style="font-size: 13px; margin-bottom: 5.4em; font-weight: 500;" data-aos="fade-right"
-                        data-aos-duration="1000" class="nunito">
+                    <div data-aos="fade-right" data-aos-duration="1000" class="nunito">
                         Aku lebih suka belajar sambil melihat atau diberi arahan dari orang yang lebih
                         berpengalaman atau
                         yang sudah tau
@@ -224,14 +225,12 @@
                         lebih
                         tenang dan nyaman dalam proses belajar.
                     </div>
-                    <hr style="margin-bottom: 3em;" data-aos="fade" data-aos-duration="1000">
+                    <hr id="garisBawah" data-aos="fade" data-aos-duration="1000">
                 </div>
-                <h1 style="font-size: 18px; font-weight: 800; text-align: right; margin-bottom: 1em;"
-                    data-aos="fade-left" class="josefin" data-aos-duration="1000">
-                    My Daily Day | <i style="font-size: 20px;" class="far fa-solid fa-calendar"></i></h1>
+                <h1 data-aos="fade-left" class="josefin" data-aos-duration="1000" id="DDindexJ">
+                    My Daily Day | <i id="logoIndex" class="far fa-solid fa-calendar"></i></h1>
                 <div class="row">
-                    <div style="font-size: 13px; margin-bottom: 5.4rem; font-weight: 500;" data-aos="fade-left"
-                        data-aos-duration="1000" class="nunito">
+                    <div data-aos="fade-left" data-aos-duration="1000" class="nunito" id="DDindex">
                         Keseharian ku sih hampir kebanyakan baca buku novel dan nonton YouTube sih..
                         Ya kalau udah bosen banget dirumah biasanya aku sempetin buat jalan jalan sebentar.
                         Tapi biasanya
@@ -250,15 +249,13 @@
                         suka juga sih. yaitu "BUG".
                         kayaknya hampir semua developer benci itu haha
                     </div>
-                    <hr style="margin-bottom: 3em;" data-aos="fade" data-aos-duration="1000">
+                    <hr id="garisBawah" data-aos="fade" data-aos-duration="1000">
                 </div>
-                <h1 class="arahteks2 josefin" style="font-size: 18px; font-weight: 800; margin-bottom: 1em;"
-                    data-aos="fade-right" data-aos-duration="1000"><i style="font-size: 20px;"
-                        class="fas fa-solid fa-code"></i>
+                <h1 class="arahteks2 josefin" data-aos="fade-right" data-aos-duration="1000"><i
+                        class="fas fa-solid fa-code" id="logoIndex"></i>
                     | Pernah coding?</h1>
                 <div class="row">
-                    <div style="font-size: 13px; font: 800; margin-bottom: 3rem; font-weight: 500;"
-                        data-aos="fade-right" class="nunito" data-aos-duration="1000">
+                    <div data-aos="fade-right" class="nunito" data-aos-duration="1000">
                         Aku pernah mencoba membuat sebuah coding berbentuk JSON, LUA, dan XML dari salah satu game irama
                         atau yang biasa
                         disebut
