--- a/materi.html
+++ b/materi.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./anotherImprove.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&display=swap"
@@ -78,16 +79,17 @@
         <!-- End Navbar -->
 
         <!-- jumbotron -->
-        <section id="produktifBG" style="overflow-y: hidden !important; overflow-x: hidden !important;">
+        <section id="materiBG" style="overflow-y: hidden !important; overflow-x: hidden !important;">
             <div class="container">
                 <div class="row">
-                    <h1 class="nunito text-white text-center"
-                        style="font-weight: 755; font-style: italic; margin-top: 3em;" data-aos="fade-right" id="textS"
-                        data-aos-duration="1000">
-                        Produktif 1!
-                    </h1>
-                    <p class="nunito text-white text-center" id="textS" data-aos="fade-left" data-aos-duration="1000"
-                        style="font-size: 15px; margin-bottom: 3em;">-</p>
+                    <h1 class="nunito text-white text-center" style="font-weight: 755; font-style: italic;"
+                        data-aos="fade-right" id="textS" data-aos-duration="1000">
+                        Materi</h1>
+                    <p class="nunito text-white text-center" id="deskripsi" data-aos="fade-left"
+                        data-aos-duration="1000" style="margin-bottom: 3em;">Semua materi yang ingin
+                        ku<br>bagikan ke semua
+                        orang!
+                    </p>
                 </div>
             </div>
             <div class="svg-container">
@@ -103,14 +105,36 @@
         <!-- content -->
         <div class="comment-box">
             <div class="comment-header">
-                <div class="comment-info">
-                </div>
+                <div class="comment-info"></div>
             </div>
-            <div class="comment-content">
-                <h1 class="text-center">Pilih Materi Yang Ingin Kamu Cari!</h1>
+            <div class="materi-content">
+                <h1 class="text-center josefin" id="h1Materi" style="font-weight: 400;">Pilih Materi Yang Ingin Kamu
+                    Cari!
+                    <hr>
+                </h1>
             </div>
-                <button type="button" class="materiIcon btn btn-secondary"> <img src="./materiIcon/cisco-systems.png" alt="logo">Cisco</button>
+            <div class="materi-buttons materi-btn">
+                <a href="/cisco.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                    <img id="materiIcon" src="./materiIcon/cisco-systems.png" alt="logo">Cisco
+                </a>
+                <a href="./mikrotik.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                    <img id="materiIcon" src="./materiIcon/mikrotik.png" alt="logo">Mikrotik
+                </a>
+                <a href="./fiber-optik.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                    <img id="materiIcon"
+                        style="filter: invert(100%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(100%) contrast(100%);"
+                        src="./materiIcon/optical-fiber.png" alt="logo">Fiber Optik
+                </a>
+                <a href="./sysadmin.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                    <i class="fa fa-regular fa-laptop" style="margin-right: 5px;" id="materiIcon"></i>SysAdmin
+                </a>
+                <a href="./pkk.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                    PKK
+                </a>
+            </div>
+
         </div>
+
         <!-- end content -->
 
 
