--- a/video.html
+++ b/video.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./anotherImprove.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&display=swap"
@@ -104,22 +105,28 @@
         <!-- content -->
         <h1 class="josefin text-center" style="margin-bottom: 70px;">My Videos</h1>
 
-<!-- this first content -->
+        <!-- this first content -->
         <div class="comment-box" style="margin-bottom: 3em;">
             <div class="comment-header">
                 <div class="comment-info">
                 </div>
             </div>
             <div class="comment-content">
-                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Apa itu Bekerja Di Ketinggian? Dan apa itu K3LH?</h1>
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Apa itu Bekerja Di
+                    Ketinggian? Dan apa itu K3LH?</h1>
                 <div class="content-wrapper">
                     <div class="video-container">
-                        <iframe width="280" height="157" src="https://www.youtube.com/embed/dzfXEhiLLx0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/dzfXEhiLLx0" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                     <div class="text-content" style="color: black; text-align: left;">
                         <p>
-                            Didalam video ini, Saya, Dafa, Sheren, Alfira, Syabrina, M.Apri akan menjelaskan tentang "Bekerja Di Ketinggian". Kita cari tahu bareng bareng apa saja yang dimaksud Bekerja Di Ketinggian itu.
-                            <br>dan kami juga membahas, alat-alat safety yang harus dipakai para pekerja, faktor penyebab terjadinya kecelakaan dalam bekerja di ketinggian.
+                            Didalam video ini, Saya, Dafa, Sheren, Alfira, Syabrina, M.Apri akan menjelaskan tentang
+                            "Bekerja Di Ketinggian". Kita cari tahu bareng bareng apa saja yang dimaksud Bekerja Di
+                            Ketinggian itu.
+                            <br>dan kami juga membahas, alat-alat safety yang harus dipakai para pekerja, faktor
+                            penyebab terjadinya kecelakaan dalam bekerja di ketinggian.
                         </p>
                         <span class="comment-time josefin">10:31 - Senin, 22 Juli 2024</span>
                     </div>
@@ -127,21 +134,25 @@
             </div>
         </div>
         <!-- fisrt content -->
-         <!-- this second content -->
+        <!-- this second content -->
         <div class="comment-box" style="margin-bottom: 3em;">
             <div class="comment-header">
                 <div class="comment-info">
                 </div>
             </div>
             <div class="comment-content">
-                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Cara membuat website yang mudah tanpa coding sedikitpun!</h1>
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Cara membuat website
+                    yang mudah tanpa coding sedikitpun!</h1>
                 <div class="content-wrapper">
                     <div class="video-container">
-                        <iframe width="280" height="157" src="https://www.youtube.com/embed/7_8F4KA6dF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/7_8F4KA6dF0" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                     <div class="text-content" style="color: black; text-align: left;">
                         <p>
-                            Sesuai judul atau titlenya, saya memberikan tutorial cara membuat website tanpa coding sedikitpun dan dapat dilakukan oleh semua orang!
+                            Sesuai judul atau titlenya, saya memberikan tutorial cara membuat website tanpa coding
+                            sedikitpun dan dapat dilakukan oleh semua orang!
                             <br>cuma pake fitur buatan google, langsung bisa bikin tanpa harus bayar sepeserpun!
                             <br>kapan lagi bisa buat website tanpa harus beli website? bisa di pake buat usaha lagi!
                         </p>
