--- a/materi.html
+++ b/materi.html
@@ -114,7 +114,7 @@
                 </h1>
             </div>
             <div class="materi-buttons materi-btn">
-                <a href="/cisco.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                <a href="./cisco.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
                     <img id="materiIcon" src="./materiIcon/cisco-systems.png" alt="logo">Cisco
                 </a>
                 <a href="./mikrotik.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
