--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maintenance Mode</title>
+    <title>My Journey! | Maintenance</title>
     <style>
         body {
             display: flex;
@@ -21,6 +21,7 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 90%;
         }
         h1 {
             font-size: 2.5rem;
@@ -43,13 +44,39 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        
+        /* Mobile styles */
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+            }
+            h1 {
+                font-size: 2rem;
+            }
+            p {
+                font-size: 1rem;
+            }
+        }
+        
+        /* Desktop styles */
+        @media (min-width: 601px) {
+            .container {
+                max-width: 600px;
+            }
+            h1 {
+                font-size: 3rem;
+            }
+            p {
+                font-size: 1.5rem;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="spinner"></div>
-        <h1>We'll be back soon!</h1>
-        <p>Sorry for the inconvenience but we're performing some maintenance at the moment. We'll be back online shortly!</p>
+        <h1>Tunggu bentar ..</h1>
+        <p>Lagi ada maintenance nih.. buka lagi nanti ya :D</p>
     </div>
 </body>
 </html>
