--- a/materi.html
+++ b/materi.html
@@ -83,7 +83,7 @@
             <div class="container">
                 <div class="row">
                     <h1 class="nunito text-white text-center" style="font-weight: 755; font-style: italic;"
-                        data-aos="fade-right" id="" data-aos-duration="1000">
+                        data-aos="fade-right" id="materiJudul" data-aos-duration="1000">
                         Materi</h1>
                     <p class="nunito text-white text-center" id="deskripsi" data-aos="fade-left"
                         data-aos-duration="1000" style="margin-bottom: 3em;">Semua materi yang ingin
