--- a/mikrotik.html
+++ b/mikrotik.html
@@ -85,11 +85,10 @@
                     <h1 class="nunito text-white text-center"
                         style="font-weight: 755; font-style: italic; margin-top: 3em;" data-aos="fade-right" id="textS"
                         data-aos-duration="1000">
-                        Cisco Packet Tracer
+                        Mikrotik
                     </h1>
                     <p class="nunito text-white text-center" id="textS" data-aos="fade-left" data-aos-duration="1000"
-                        style="font-size: 15px; margin-bottom: 3em;">Materi yang akan dibahas tentang Cisco Packet
-                        Tracer.</p>
+                        style="font-size: 15px; margin-bottom: 3em;">Materi yang akan dibahas tentang Mikrotik.</p>
                 </div>
             </div>
             <div class="svg-container">
