--- a/sysadmin.html
+++ b/sysadmin.html
@@ -79,16 +79,16 @@
         <!-- End Navbar -->
 
         <!-- jumbotron -->
-        <section id="produktifBG" style="overflow-y: hidden !important; overflow-x: hidden !important;">
+        <section id="sysAdmin" style="overflow-y: hidden !important; overflow-x: hidden !important;">
             <div class="container">
                 <div class="row">
                     <h1 class="nunito text-white text-center"
                         style="font-weight: 755; font-style: italic; margin-top: 3em;" data-aos="fade-right" id="textS"
                         data-aos-duration="1000">
-                        Produktif 1!
+                        SysAdmin
                     </h1>
                     <p class="nunito text-white text-center" id="textS" data-aos="fade-left" data-aos-duration="1000"
-                        style="font-size: 15px; margin-bottom: 3em;">-</p>
+                        style="font-size: 15px; margin-bottom: 3em;">Materi yang akan dibahas disini tentang SysAdmin.</p>
                 </div>
             </div>
             <div class="svg-container">
