add thumbnail, fix preview image on desktop, etc.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 
 <body style="overflow-x: hidden;">
 
+
+
+    
+    <!-- mengaktifkan mode maintenance -->
+    <meta http-equiv="refresh" content="0;url=maintenance.html">
+    <!-- mengaktifkan mode maintenance -->
+
+
+
+
     <!-- Navbar -->
     <style>
         .navbar {
