--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     
     <!-- mengaktifkan mode maintenance -->
-    <meta http-equiv="refresh" content="0;url=maintenance.html">
+    <!-- <meta http-equiv="refresh" content="0;url=maintenance.html"> -->
     <!-- mengaktifkan mode maintenance -->
 
 
