--- a/album.html
+++ b/album.html
@@ -121,12 +121,12 @@
     <img src="./thumbnail/photo1-thumb.jpeg" data-full-src="./album/photo1.jpeg" data-description="Foto saya dan teman teman saya saat selesai tampil drama jurusan" onclick="showPreview(this)">
     <img src="./thumbnail/photo2-thumb.jpeg" data-full-src="./album/photo2.jpeg" data-description="Ini dengan teman-teman kelas industri saya, kami baru saja menyelesaikan proyek IoT Smart Home!" onclick="showPreview(this)">
     <img src="./thumbnail/photo3-thumb.jpeg" data-full-src="./album/photo3.jpeg" data-description="Saya dan dua teman saya mau bersiap-siap untuk kegiatan 17 Agustus di SMKN 15 Kota Bekasi!" onclick="showPreview(this)">
-    <img src="./thumbnail/photo4-thumb.jpeg" data-full-src="./album/photo4.jpeg" data-description="Foto ini diambil saat sebelum penampilan drama jurusan saya!" onclick="showPreview(this)">
-    <img src="./thumbnail/photo5-thumb.jpeg" data-full-src="./album/photo5.jpeg" data-description="Saya dan teman-teman saya mampir ke MGT setelah kerja kelompok.. Refreshing sebelum katanya haha..." onclick="showPreview(this)">
+    <img src="./thumbnail/photo4-thumb.jpeg" data-full-src="./album/photo4.jpeg" data-description="Foto ini diambil sebelum penampilan drama jurusan saya!" onclick="showPreview(this)">
+    <img src="./thumbnail/photo5-thumb.jpeg" data-full-src="./album/photo5.jpeg" data-description="Saya dan teman-teman saya mampir ke MGT setelah kerja kelompok.. Refreshing sebelum ulangan katanya haha..." onclick="showPreview(this)">
     <img src="./thumbnail/photo6-thumb.jpeg" data-full-src="./album/photo6.jpeg" data-description="Foto ini diambil saat saya dan teman-teman saya sedang mengerjakan tugas Bahasa Indonesia!" onclick="showPreview(this)">
     <img src="./thumbnail/photo7-thumb.jpg" data-full-src="./album/photo7.jpg" data-description="Kami merayakan hari Ulang Tahun Nafis ditempat ini" onclick="showPreview(this)">
-    <img src="./thumbnail/photo8-thumb.jpg" data-full-src="./album/photo8.jpg" data-description="Foto bareng sama anak-anak dari SMK yang berbeda. Tapi tujuan kami semua disini sama, Untuk Mengikuti Lomba" onclick="showPreview(this)">
-    <img src="./thumbnail/masaSMP-thumb.jpeg" data-full-src="./album/masaSMP.jpeg" data-description="Saya bersama teman-teman smp saya ...." onclick="showPreview(this)">
+    <img src="./thumbnail/photo8-thumb.jpg" data-full-src="./album/photo8.jpg" data-description="Foto bareng sama anak-anak dari SMK yang berbeda. Tapi tujuan kami semua disini sama, Untuk Mengikuti Lomba di SMK KGB 2" onclick="showPreview(this)">
+    <img src="./thumbnail/masaSMP-thumb.jpeg" data-full-src="./album/masaSMP.jpeg" data-description="Saya bersama teman-teman smp saya ..." onclick="showPreview(this)">
 </div>
 
 <!-- preview image -->
