--- a/cisco.html
+++ b/cisco.html
@@ -108,8 +108,17 @@
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-                <h1 class="text-center">Masih Kosong.</h1>
-                <span class="comment-time josefin">10:24 - Rabu, 24 Juli 2024</span>
+                <h1 style="text-align: left;">Apa itu Cisco?</h1>
+                <p style="text-align: left;">Cisco itu adalah sebuah perusahaan.
+                    Perusahaan yang mengembangkan, memproduksi, dan menjual perangkat keras jaringan<br><br>
+                    
+                    Nah Cisco Packet Tracer adalah sebuah aplikasi virtualisasi jaringan dari alat alat jaringan.<br><br>
+
+                    Cisco alat alat yang dipakai oleh perusahaan besar
+                    Sedangkan mikrotik dipakai oleh kalangan bawah<br><br>
+                    
+                    Tingkatan sertifikat Cisco: CCENT, CCNA, CCNP, CCIE</p>
+            <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
             </div>
         </div>
 
