--- a/sysadmin.html
+++ b/sysadmin.html
@@ -102,13 +102,15 @@
         <!-- end jumbotron -->
 
         <!-- content -->
+        <h1 style="text-align: center;">Cara melakukan instalasi Debian 9 pada Virtualbox</h1>
         <div class="comment-box">
             <div class="comment-header">
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-                <h1 class="text-center">Masih Kosong.</h1>
-                <span class="comment-time josefin">10:24 - Rabu, 24 Juli 2024</span>
+                <p style="text-align: left;">Sebelum lanjut ke cara instalasinya, kita harus mengenali apa itu Virtualbox dan Debian</p>
+                <p style="text-align: left; margin-top: 1em;">VirtualBox adalah perangkat lunak virtualisasi yang memungkinkan menjalankan berbagai sistem operasi di satu komputer,<br>sedangkan Debian adalah distribusi Linux yang dikenal karena stabilitas dan keandalannya, khususnya sebagai sistem operasi server.</p>
+            <p style="text-align: right;" class="comment-time josefin">11::01 - Kamis, 15 Agustus 2024</p>
             </div>
         </div>
 
