--- a/sysadmin.html
+++ b/sysadmin.html
@@ -109,8 +109,8 @@
             </div>
             <div class="materi-content">
                 <p style="text-align: left;">Sebelum lanjut ke cara instalasinya, kita harus mengenali apa itu Virtualbox dan Debian</p>
-                <img src="./materiIcon/Virtualbox_logo.png" alt="">
-                <img src="./materiIcon/Debian_logo.png" alt="">
+                <img src="./materiIcon/Virtualbox_logo.png" style="width: 50px;" alt="">
+                <img src="./materiIcon/Debian_logo.png" style="width: 50px;" alt="">
                 <p style="text-align: left; margin-top: 1em;">VirtualBox adalah perangkat lunak virtualisasi yang memungkinkan menjalankan berbagai sistem operasi di satu komputer,<br>sedangkan Debian adalah distribusi Linux yang dikenal karena stabilitas dan keandalannya, khususnya sebagai sistem operasi server.</p>
             <p style="text-align: right;" class="comment-time josefin">11::01 - Kamis, 15 Agustus 2024</p>
             </div>
